Add img placholder

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <div class="team-container">
         <div class="team-member">
-            <img src="/api/placeholder/400/300" alt="Marco Rossi" class="member-image">
+            <img src="/img/placeholder-400-300.png" alt="Marco Rossi" class="member-image">
             <div class="member-info">
                 <h2 class="member-name">Marco Rossi</h2>
                 <p class="member-role">CEO & Co-fondatore</p>
@@ -82,7 +82,7 @@
         </div>
 
         <div class="team-member">
-            <img src="/api/placeholder/400/300" alt="Laura Bianchi" class="member-image">
+            <img src="/img/placeholder-400-300.png" alt="Laura Bianchi" class="member-image">
             <div class="member-info">
                 <h2 class="member-name">Laura Bianchi</h2>
                 <p class="member-role">CTO</p>
@@ -90,7 +90,7 @@
         </div>
 
         <div class="team-member">
-            <img src="/api/placeholder/400/300" alt="Giuseppe Verdi" class="member-image">
+            <img src="/img/placeholder-400-300.png" alt="Giuseppe Verdi" class="member-image">
             <div class="member-info">
                 <h2 class="member-name">Giuseppe Verdi</h2>
                 <p class="member-role">Lead Developer</p>
@@ -98,7 +98,7 @@
         </div>
 
         <div class="team-member">
-            <img src="/api/placeholder/400/300" alt="Sofia Marino" class="member-image">
+            <img src="/img/placeholder-400-300.png" alt="Sofia Marino" class="member-image">
             <div class="member-info">
                 <h2 class="member-name">Sofia Marino</h2>
                 <p class="member-role">UX Designer</p>
