--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <img src="img/placeholder-400-300.png" alt="Giuseppe Verdi" class="member-image">
             <div class="member-info">
                 <h2 class="member-name">Giuseppe Verdi</h2>
-                <p class="member-role">Lead Developer</p>
+                <p class="member-role">Developer</p>
             </div>
         </div>
 
